Manifest/helloweb-service-load-balancer.yaml
# [START gke_manifests_helloweb_service_load_balancer_service_helloweb]
# [START container_helloapp_service_load_balancer]
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  labels:
    app: hello
    tier: web
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello
    tier: web
# [END container_helloapp_service_load_balancer]
# [END gke_manifests_helloweb_service_load_balancer_service_helloweb]
---
