Manifest/helloweb-ingress-static-ip.yaml
# [START container_helloapp_ingress]
# [START gke_manifests_helloweb_ingress_static_ip_ingress_helloweb]
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloweb-ip
  labels:
    app: hello
spec:
  defaultBackend:
    service:
      name: helloweb-backend
      port:
        number: 8080
# [END gke_manifests_helloweb_ingress_static_ip_ingress_helloweb]
---
# [START gke_manifests_helloweb_ingress_static_ip_service_helloweb_backend]
apiVersion: v1
kind: Service
metadata:
  name: helloweb-backend
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
# [END gke_manifests_helloweb_ingress_static_ip_service_helloweb_backend]
# [END container_helloapp_ingress]
---
